polish nav drawer accordion menus

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "CCRS",
-  "name": "Caha Coaches Record System",
+  "name": "Caha Coaches Transport Management System",
   "icons": [
     {
       "src": "favicon.ico",
