no longer allow adding the same reg to a table multiple times

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CCRS",
-  "name": "Caha Coaches Transport Management System",
+  "short_name": "FleetIQ",
+  "name": "Fleet IQ",
   "icons": [
     {
       "src": "favicon.ico",
