--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "caha-coaches-record-system",
+  "name": "fleetiq-record-system",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,7 +28,7 @@
     "react-data-table-component": "^7.5.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.17.3",
-    "react-router-dom": "5.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -55,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
