--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "react-i18next": "^11.17.3",
     "react-router-dom": "^6.26.2",
     "react-scripts": "4.0.3",
+    "viject": "^1.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "vite"
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +60,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "prettier": "^3.3.3"
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.0.0"
   }
 }
